// Copyright 2024 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package google.internal.remoting.cloud.v1alpha;

option optimize_for = LITE_RUNTIME;

// //third_party/protobuf/src/google/protobuf/field_mask.proto cannot be
// directly imported to Chrome because it is not in the `protobuf_lite` source
// and the `protobuf_full` source cannot be included in Chrome because of it's
// large size. Therefore, this copies the proto which is small and stable to be
// used across the codebase.
message FieldMask {
  // The set of field mask paths.
  repeated string paths = 1;
}
